deployment/django/django.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: divedb-django-deployment
  labels:
    app: divedb-django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: divedb-django
  template:
    metadata:
      labels:
        app: divedb-django
    spec:
      imagePullSecrets:
      - name: ghcr-login-ecophysviz
      containers:
      - name: django
        image: ghcr.io/ecophysviz-lab/divedb-django:pr-16
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
           limits:
             memory: 4G
             cpu: 1
           requests:
             memory: 1G
             cpu: 50m
