deployment/django/django.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: divedb-django-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: divedb-django
